--- a/RoleManagement/appsettings.json
+++ b/RoleManagement/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RoleManagement-7F336E5E-E4A5-425A-A5C1-F403EDBF2F58;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"StudentStoreConnection": "Server=.\\sqlexpress;Database=StudentDetails;Trusted_Connection=True;ConnectRetryCount=0;"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
